--- a/arch/arm/boot/dts/armada-385-db-ap.dts
+++ b/arch/arm/boot/dts/armada-385-db-ap.dts
@@ -100,21 +100,18 @@
 				nfc,ecc-type  = <1>;		/* 4 bit */
 				nfc,num-cs    = <1>;
 
-				mtd0@00000000 {
+				mtd0@0 {
 					label = "U-Boot";
-					reg = <0x00000000 0x00600000>;
+					reg = <0 0x800000>;
 					read-only;
 				};
-
-				mtd1@00080000 {
-					label = "uImage";
-					reg = <0x00600000 0x00400000>;
-					read-only;
+				mtd1@800000 {
+					label = "Linux";
+					reg = <0x800000 0x800000>;
 				};
-
 				mtd2@00140000 {
-					label = "Root";
-					reg = <0x00a00000 0x3f600000>;
+					label = "Filesystem";
+					reg = <0x1000000 0x3f000000>;
 				};
 			};
 
