platform: 101-armada-385-db-ap-wifi.patch

--- a/arch/arm/boot/dts/armada-385-db-ap.dts
+++ b/arch/arm/boot/dts/armada-385-db-ap.dts
@@ -156,10 +156,20 @@
 			pcie@2,0 {
 				/* Port 1, Lane 0 */
 				status = "okay";
+
+				mwlwifi {
+					marvell,2ghz = <0>;
+					marvell,chainmask = <4 4>;
+				};
 			};
 			pcie@3,0 {
 				/* Port 2, Lane 0 */
 				status = "okay";
+
+				mwlwifi {
+					marvell,5ghz = <0>;
+					marvell,chainmask = <4 4>;
+				};
 			};
 		};
 	};
